--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
-  <link rel="canonical" href="https://www.inferentialthinking.com/chapters/intro">
-  <script>location="https://www.inferentialthinking.com/chapters/intro"</script>
-  <meta http-equiv="refresh" content="0; url=https://www.inferentialthinking.com/chapters/intro">
+  <link rel="canonical" href="https://data8-dev.ung.co/chapters/intro">
+  <script>location="https://data8-dev.ung.co/chapters/intro"</script>
+  <meta http-equiv="refresh" content="0; url=https://data8-dev.ung.co/chapters/intro">
   <meta name="robots" content="noindex">
   <h1>Redirecting&hellip;</h1>
-  <a href="https://www.inferentialthinking.com/chapters/intro">Click here if you are not redirected.</a>
+  <a href="https://data8-dev.ung.co/chapters/intro">Click here if you are not redirected.</a>
 </html>
