--- a/CourseSchedule.html
+++ b/CourseSchedule.html
@@ -60,7 +60,7 @@
   <div class="container">
 <section id="content">
 
-
+    <!--
 <h2>Announcements</h2>
 
 <div id="announcements">
@@ -723,13 +723,13 @@
 <li>Links to sign up for lab and discussion times will be sent out next week.</li>
 </ul>
     </div>
-</div><!-- /#posts-list -->
+</div>-- /#posts-list -->
 
 <h2>Calendar</h2>
     <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Instructors</strong>: David Wagner and Swupnil Sahai</p>
+<p><strong>Instructors</strong>: Robb Sinn, Gregg Valatini, John Bergschneider </p>
 </div>
 </div>
 </div>
